test/conformance/chainsaw/generate/clusterpolicy/cornercases/clone-source-managed-by-label-helm/chainsaw-step-01-assert-1-1.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: sync-image-pull-secrets
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
