test/conformance/chainsaw/generate/clusterpolicy/cornercases/clone-source-managed-by-label-helm/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: clone-source-name-exceeds-63-characters
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: sync-image-pull-secrets
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
    - assert:
        file: chainsaw-step-02-assert-1-1.yaml
  - name: step-03
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: Secret
          name: harbor-external
          namespace: platform
  - name: step-04
    try:
    - error:
        file: chainsaw-step-02-assert-1-1.yaml
